--- a/homework0.tex
+++ b/homework0.tex
@@ -1,4 +1,4 @@
-%% LyX 2.2.3 created this file.  For more info, see http://www.lyx.org/.
+%% alloLyX 2.2.3 created this file.  For more info, see http://www.lyx.org/.
 %% Do not edit unless you really know what you are doing.
 \documentclass[11pt,french,english]{article}
 \usepackage[T1]{fontenc}
